# azure-demo

backend/: CHANGELOG.md  LICENSE  README.md  azure-demo.cabal  cabal.project  config.dhall  shell.nix
backend/app/: Main.hs
backend/src/: Api.hs  App.hs  Database.hs  Errors.hs  Opts.hs  Routes.hs  Runner.hs  Types.hs
backend/src/Api/: Todo.hs  User.hs
backend/src/DataAccess/: Todo.hs  User.hs
backend/src/Database/: Todo.hs  User.hs
backend/src/Domain/: Todo.hs  User.hs
backend/src/Models/: Todo.hs  User.hs
backend/test/Test/DataAccess/: Todo.hs
backend/test/Test/Domain/: Todo.hs
sql/: Makefile  db_schema.sql  db_schema_destroy.sql  moo.cfg
sql/migrations/: 2020-05-21_18-17-00_schema.txt
