cabal-version: >=1.10
name:          azure-demo
version:       0.1.0.0
license:       Apache-2.0
license-file:  LICENSE
author:        Brian Jones
maintainer:    bcj@alasconnect.com
copyright:     2020 AlasConnect LLC
build-type:    Simple

library
  exposed-modules:
      Api
    , App
    , Database
    , Errors
    , Opts
    , Routes
    , Runner
    , Types
  exposed-modules:
      Api.Todo
    , Domain.Todo
    , DataAccess.Todo
    , Database.Todo
    , Models.Todo
  build-depends:
      base
    , aeson
    , beam-core
    , beam-postgres
    , deriving-aeson
    , dhall
    , lens
    , mtl
    , optparse-applicative
    , postgresql-simple
    , resource-pool
    , servant
    , servant-server
    , text
    , wai
    , warp
  hs-source-dirs:
      src
  default-language:
      Haskell2010
  default-extensions:
      LambdaCase
    , OverloadedStrings
  ghc-options:
      -Wall

executable azure-demo-exe
  main-is:
      Main.hs
  hs-source-dirs:
      app
  build-depends:
      azure-demo
    , base
    , optparse-applicative
  default-language:
      Haskell2010
  default-extensions:
      LambdaCase
    , OverloadedStrings
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-maxN2 -Wall -j -O0 -v0

test-suite spec
  type:
      exitcode-stdio-1.0
  main-is:
      Spec.hs
  other-modules:
      Test.Domain.Todo
  other-modules:
      Test.DataAccess.Todo
  hs-source-dirs:
      test
  ghc-options:
      -threaded -Wall
  build-depends:
      base
    , hspec
    , azure-demo
  default-language:
      Haskell2010
  default-extensions:
      LambdaCase
    , OverloadedStrings
